<resources>
    <string name="app_name">Pasteleria</string>
    <string name="botoningresar">iniciar sesion</string>
    <string name="botoninicio">Volver al inicioinicio</string>
    <string name="botonanterior">anterior</string>
    <string name="botonCuentas">cuentas</string>
    <string name="botonRegistrar">registrar</string>
    <string name="textview">TextView</string>
    <string name="registrarse">Registrarse</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="todo">TODO</string>
</resources>