<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Registrarse"


    >

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:backgroundTint="#FE7D8E"
        android:drawableTint="@color/white"
        android:ems="10"
        android:foregroundTint="@color/white"
        android:hint="@string/repetir_contrase_a"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:shadowColor="#FFFFFF"
        android:textColorHighlight="@color/white"
        android:textColorHint="#D81B60"
        android:textColorLink="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        android:autofillHints="" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="116dp"
        android:backgroundTint="#FE7D8E"
        android:onClick="Anterior"
        android:text="@string/registrarse"
        android:textColor="#D81B60"
        android:textColorHint="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        tools:ignore="VisualLintButtonSize" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:autofillHints=""
        android:backgroundTint="#FE7D8E"
        android:drawableTint="@color/white"
        android:ems="10"
        android:foregroundTint="@color/white"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:shadowColor="#FFFFFF"
        android:textColorHighlight="@color/white"
        android:textColorHint="#D81B60"
        android:textColorLink="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:backgroundTint="#FE7D8E"
        android:drawableTint="@color/white"
        android:ems="10"
        android:foregroundTint="@color/white"
        android:hint="@string/email"
        android:inputType="text"
        android:minHeight="48dp"
        android:shadowColor="#E91E63"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="#D81B60"
        android:textColorLink="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="103dp"
        tools:ignore="VisualLintTextFieldSize" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="227dp"
        android:layout_height="176dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/editTxtnombreusuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:autofillHints=""
        android:backgroundTint="#FE7D8E"
        android:drawableTint="@color/white"
        android:ems="10"
        android:foregroundTint="@color/white"
        android:hint="@string/nombre_de_usuario"
        android:inputType="text"
        android:minHeight="48dp"
        android:shadowColor="#E91E63"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="#D81B60"
        android:textColorLink="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="34dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
